/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.5.1/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building a CLI application.
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.beryx.jlink' version '2.19.0'
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenLocal()
    maven {
        url 'https://mirrors.huaweicloud.com/repository/maven/'
    }
    mavenCentral()
}

dependencies {
    // This dependency is used by the application.
    implementation 'io.reactivex.rxjava3:rxjava:3.0.5'

    // Use JUnit Jupiter API for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'

    // Use JUnit Jupiter Engine for testing.
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
}

javafx {
    version = "14"
    modules = ['javafx.graphics', 'javafx.fxml', 'javafx.controls']
}

jlink {
    launcher {
        name = 'picture-tool'
    }
}

application {
    // Define the main class for the application.
    mainModule.set('picture.tool')
    mainClassName = 'picture.tool.FxApplication'
}

test {
    // Use junit platform for unit tests
    useJUnitPlatform()
    jvmArgs += [
            '--add-exports', 'org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED',
            '--add-exports', 'org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED'
    ]
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}